# Mklink-AI-Probe

./: README.md
Mklink-AI-Probe/: .mcp.json  README.md  SKILL.md  pyproject.toml
Mklink-AI-Probe/.claude-plugin/: plugin.json
Mklink-AI-Probe/MK-Firmware/: MicroLink_V3.3.1.uf2  MicroLink_V3.3.3.uf2  MicroLink_V4.3.1.uf2  MicroLink_V4.3.3.uf2
Mklink-AI-Probe/agents/: openai.yaml
Mklink-AI-Probe/commands/: tauri-dev.md
Mklink-AI-Probe/docs/: gui-e2e-hil-regression-2026-06-26.md  issue-read-core-registers-dcrdr-stale.md  mcp-plugin-test-plan.md  systemview-debug-status.md
Mklink-AI-Probe/docs/Mklink/: 2026-06-26-gd32f303-dump-flush-boundary-retest-report.md
Mklink-AI-Probe/gui/: .env.production  TAURI_SETUP.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Mklink-AI-Probe/gui/src-tauri/: Cargo.toml  tauri.conf.json
Mklink-AI-Probe/mklink/: _deps.py  autostart.py  bridge.py  cli.py  debug_control.py  device.py  dump_memory.py  dwarf_parser.py  firmware_check.py  flash.py  hardfault.py  keil_parser.py  local_resources.py  mcp_server.py  mcu_detect.py  mcu_profiles.json  memmap.py  project_config.py  rtt.py  rtt_addr.py  rtt_integration.py  superwatch.py  systemview.py  systemview_analyzer.py  systemview_integration.py  systemview_logger.py  systemview_logs.py  systemview_parser.py  systemview_report.py  toolchain.py  vofa_viewer.py  watch.py
Mklink-AI-Probe/references/: commands-flash-rtt.md  commands-memory.md  commands-remote-gui.md  commands-serial.md  flush-memory.md  install.md  rtt-static-mode.md  systemview-rtthread.md  triggers.md  workflows.md
(+84 files in other folders)
